# SDL2_Functions

./: CMakeLists.txt  main.cpp
itc_sdl_lib/: itc_sdl.h  itc_sdl1.cpp  itc_sdl1.h  itc_sdl2.cpp  itc_sdl2.h
